--- a/index.html
+++ b/index.html
@@ -51,44 +51,44 @@
             <h2>Book Your Shoot</h2>
             <div class="button-grid">
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/wedding_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Wedding Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/prewedding_buttonImage.jpg');"></div>
                     <span class="button-label">Prewedding Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/podcast_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Podcast Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/product_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Product Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
-                    <span class="button-label">Birthday Shoot</span>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/bookPhotographer_buttonImage.jpg');"></div>
+                    <span class="button-label">Book Photographer</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/corparate_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Corporate Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
-                    <span class="button-label">Fashion Shoot</span>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/portfolio_shoot_buttonImage.jpg');"></div>
+                    <span class="button-label">portfolio Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/musicVid_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Music Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
-                    <span class="button-label">Sports Shoot</span>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/monument_shoot_buttonImage.jpg');"></div>
+                    <span class="button-label">shoot at monument</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('https://via.placeholder.com/80');"></div>
-                    <span class="button-label">Home Shoot</span>
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/customized_shoot_buttonImage.jpg');"></div>
+                    <span class="button-label">customized Shoot</span>
                 </div>
             </div>
         </section>
@@ -111,6 +111,72 @@
                 </div>
             </div>
         </section>
+
+        <!-- Additional Slideshow -->
+        <section class="slideshow-container">
+            <div class="slideshow">
+                <img src="slide4.jpg" alt="Slide 4" class="active">
+                <img src="slide5.jpg" alt="Slide 5">
+                <img src="slide6.jpg" alt="Slide 6">
+            </div>
+        </section>
+
+        <!-- Equipment Booking Section -->
+        <section class="book-equipment">
+            <h2>Book Equipment</h2>
+            <div class="button-grid">
+                <div class="button-item">
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentDSLR_buttonImage.jpg');"></div>
+                    <span class="button-label">Camera</span>
+                </div>
+                <div class="button-item">
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/renttripod_buttonImage.jpg');"></div>
+                    <span class="button-label">Tripod</span>
+                </div>
+                <div class="button-item">
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentLight_buttonImage.jpg');"></div>
+                    <span class="button-label">Lighting</span>
+                </div>
+                <div class="button-item">
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentDrone_buttonImage.jpg');"></div>
+                    <span class="button-label">Drones</span>
+                </div>
+                <div class="button-item">
+                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentLens_buttonImage.jpg');"></div>
+                    <span class="button-label">Lens</span>
+                </div>
+            </div>
+        </section>
+
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>About Us</h3>
+                <p>We are Shootezy, your one-stop platform to book professional video services or rent high-quality equipment effortlessly. Our mission is to make video production accessible to everyone while providing an easy and seamless experience for content creators, filmmakers, and event organizers.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#partner">Become Partner</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: info@shootezy.com</p>
+                <p>Phone: +91 123 456 7890</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Shootezy. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
