--- a/index.html
+++ b/index.html
@@ -51,44 +51,44 @@
             <h2>Book Your Shoot</h2>
             <div class="button-grid">
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/wedding_shoot_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/wedding_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Wedding Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/prewedding_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/prewedding_buttonImage.jpg');"></div>
                     <span class="button-label">Prewedding Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/podcast_shoot_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/podcast_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Podcast Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/product_shoot_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/product_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Product Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/bookPhotographer_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/bookPhotographer_buttonImage.jpg');"></div>
                     <span class="button-label">Book Photographer</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/corparate_shoot_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/corparate_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Corporate Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/portfolio_shoot_buttonImage.jpg');"></div>
-                    <span class="button-label">portfolio Shoot</span>
+                    <div class="circle" style="background-image: url('assets/portfolio_shoot_buttonImage.jpg');"></div>
+                    <span class="button-label">Portfolio Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/musicVid_shoot_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/musicVid_shoot_buttonImage.jpg');"></div>
                     <span class="button-label">Music Shoot</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/monument_shoot_buttonImage.jpg');"></div>
-                    <span class="button-label">shoot at monument</span>
+                    <div class="circle" style="background-image: url('assets/monument_shoot_buttonImage.jpg');"></div>
+                    <span class="button-label">Shoot at Monument</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/customized_shoot_buttonImage.jpg');"></div>
-                    <span class="button-label">customized Shoot</span>
+                    <div class="circle" style="background-image: url('assets/customized_shoot_buttonImage.jpg');"></div>
+                    <span class="button-label">Customized Shoot</span>
                 </div>
             </div>
         </section>
@@ -126,23 +126,23 @@
             <h2>Book Equipment</h2>
             <div class="button-grid">
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentDSLR_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/rentDSLR_buttonImage.jpg');"></div>
                     <span class="button-label">Camera</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/renttripod_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/renttripod_buttonImage.jpg');"></div>
                     <span class="button-label">Tripod</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentLight_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/rentLight_buttonImage.jpg');"></div>
                     <span class="button-label">Lighting</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentDrone_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/rentDrone_buttonImage.jpg');"></div>
                     <span class="button-label">Drones</span>
                 </div>
                 <div class="button-item">
-                    <div class="circle" style="background-image: url('X:/shhotBuddy/website/shootezy_website/rentLens_buttonImage.jpg');"></div>
+                    <div class="circle" style="background-image: url('assets/rentLens_buttonImage.jpg');"></div>
                     <span class="button-label">Lens</span>
                 </div>
             </div>
